# niobium-client

./: .gitignore  .gitmodules  .scanoss-curations.json  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  NOTICE  PYTHON.md  README.md  pyproject.toml
.agents/skills/fhe-application-design/: .vendored-from
.agents/skills/fhe-application-design/references/: implementing-with-nb-dsl.md
.claude/skills/fhe-application-design/: SKILL.md  VENDORED.md
.claude/skills/fhe-application-design/references/: example-fetch-by-similarity.md  example-network-intrusion-detection.md  example-set-membership.md  implementing-with-nb-dsl.md
.github/instructions/: CODE_REVIEW_GUIDE.md
.github/workflows/: auto-pr-from-fhetch.yml  auto-pr-from-haze.yml  ci.yml  compiler-tests.yml  dispatch-to-compiler-on-merge.yml  fbs-consumer-check.yml  pr-claude-code-review.yml  reusable-submodule-update.yml  source-tarball.yml  update-fhe-application-design-submodule.yml  update-niobium-fhetch-submodule.yml  update-niobium-haze-submodule.yml  wheels.yml
docs/: AUTO_FACADE.md
dsl_fhe/: .gitignore  AGENTS.md  CLAUDE.md  GRAMMAR.md  HOWTO.md  Makefile  NB_LANGUAGE.md  README.md
dsl_fhe/examples/fetch-by-similarity/: client.nb  client.niob  server.nb  server.niob  shared.nb  shared.niob
dsl_fhe/examples/fetch-by-similarity/harness/: cleartext_impl.py  generate_dataset.py  generate_query.py  params.py  run.py  verify_result.py
dsl_fhe/examples/fetch-by-similarity/support/: running_sums.cpp  slot_replication.cpp  utils.h
dsl_fhe/examples/fhe-NetworkMonitor/: client.nb  client.niob  server.nb  server.niob  shared.nb  shared.niob
dsl_fhe/examples/fhe-NetworkMonitor/assets/: .gitignore  README.md  make_stub_assets.py
dsl_fhe/examples/fraud-flag/: README.md  client.nb  client.niob  server.nb  server.niob  shared.nb  shared.niob
dsl_fhe/examples/fraud-flag/harness/: encode_cards.py
dsl_fhe/examples/ml-inference-fhe/: .gitignore  HOWTO.md  client.nb  client.niob  mlp_bridge.cpp  mlp_bridge.h  mlp_openfhe.cpp  mlp_openfhe.h  server.nb  server.niob  shared.nb  shared.niob
dsl_fhe/examples/ml-inference-fhe/data/: README.md  make_stub_weights.py
dsl_fhe/examples/password-retrieval/: README.md  client.nb  client.niob  server.nb  server.niob  shared.nb  shared.niob
dsl_fhe/examples/set-membership/: client.nb  client.niob  server.nb  server.niob  shared.nb  shared.niob
dsl_fhe/examples/set-membership/harness/: encode_names.py
dsl_fhe/examples/simple/: client.nb  client.niob  server.nb  server.niob  shared.nb  shared.niob
dsl_fhe/scripts/: apply_client_license.py
dsl_fhe/tools/: verify_replay_integrity.py
dsl_fhe/xcomp/: ast_nodes.py  builtins_registry.py  chebfit.py  codegen.py  errors.py  lexer.py  nb_types.py  nbc.py  parser.py  semantic.py
dsl_fhe/xcomp/tests/: test_codegen.py  test_lexer.py  test_parser.py  test_semantic.py
examples/: CMakeLists.txt
examples/auto/: ciphers_ops_cache_keys.cpp  ciphers_ops_client.cpp  ciphers_ops_server_auto.cpp  params.h  utils.h
examples/bootstrap/: server.cpp
examples/bootstrap_auto/: bootstrap_auto.cpp  run_bootstrap_auto.py
examples/mult/: client.cpp  decrypt.cpp  server.cpp
examples/python/: README.md
examples/python/bootstrap/: client.py  decrypt.py  server.py
examples/python/mult/: decrypt.py  server.py
examples/python/plaintext_add/: client.py  server.py
examples/python/simple_ops/: client.py  server.py
examples/simple_ops/: client.cpp  decrypt.cpp  server.cpp
include/niobium/: compiler.h  fhetch_api.h
include/niobium/Utils/: ScopedPause.h
include/niobium/fhetch_sim/: simulator.h
make/: python.mk  source-tarball.mk
python/: CMakeLists.txt  README.md  USAGE.md  archive_binding.cpp
python/examples/: README.md
python/examples/bootstrap/: client.py  decrypt.py  server.py
python/examples/mult/: client.py  decrypt.py  server.py
python/examples/plaintext_add/: client.py  decrypt.py  server.py
python/examples/simple_ops/: client.py  decrypt.py  server.py
python/niobium_client/: __init__.py  client.py  session.py
python/niobium_sdk/: __init__.py  client.py  fog.py  session.py
python/tests/: fog_smoke.py  ring_dim_check_smoke.py  submit_smoke.py  wheel_smoke.py
scripts/: fhetch_server.sh  fog  fog_jobs.py  fog_replay.py  fog_token.py  repair_wheel.sh  repair_wheel_macos.sh  test_transport_mult.sh  update-fhe-skill.sh
src/: auto_facade.cpp  compiler.cpp  compiler_internal.h  fhetch_api.cpp  probes.cpp  trace_writer.cpp  trace_writer.h
src/auto_facade/: AutoFacade.cpp  CMakeLists.txt
src/fhetch_sim/: instruction.cpp  instruction.h  simulator.cpp
src/fhetch_transport/: CMakeLists.txt  archive.cpp  archive.h  client.cpp  protocol.h  server.cpp
tools/: nbcc.py
