[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3,<4"]
build-backend = "scikit_build_core.build"

[project]
name = "niobium_client"
dynamic = ["version"]
description = "Niobium FHE client — record OpenFHE computations for the Mistic accelerator"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Niobium Microsystems" }]
# No runtime dependencies: the crypto/session/archive natives are bundled, the
# submit client and nbc DSL compiler are pure stdlib.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/NiobiumInc/niobium-client"
"nb DSL reference" = "https://github.com/NiobiumInc/niobium-client/tree/main/dsl_fhe"
"FHE design skill" = "https://github.com/NiobiumInc/niobium-skills"

[tool.scikit-build]
cmake.version = ">=3.16"
# Build only the Python package; the crypto/session extensions come from
# niobium-fhetch's WITH_PYTHON (flipped by NIOBIUM_CLIENT_WITH_PYTHON). The C++
# transport binaries, auto-facade, and examples are not part of the wheel.
cmake.args = [
    "-DNIOBIUM_CLIENT_WITH_PYTHON=ON",
    "-DNIOBIUM_CLIENT_WITH_AUTO_FACADE=OFF",
    "-DNIOBIUM_CLIENT_WITH_FHETCH_TRANSPORT=OFF",
    "-DNIOBIUM_CLIENT_WITH_EXAMPLES=OFF",
]
# The wheel content comes solely from the CMake `python_wheel` install component
# (the assembled niobium_client/ tree). Disable pure-Python auto-discovery so the
# in-tree python/niobium_client sources aren't packaged a second time.
install.components = ["python_wheel"]
wheel.packages = []

# Single source of truth: the wheel version is read from the VERSION file that the
# package also exposes as niobium_client.__version__.
[[tool.dynamic-metadata]]
field = "version"
provider = "scikit_build_core.metadata.regex"
input = "python/niobium_client/VERSION"
regex = "^(?P<value>.+)$"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux*"          # glibc manylinux only for now
build-verbosity = 1
# Cap compile parallelism: the OpenFHE-template TUs (openfhe.so bindings, libnbfhetch)
# each use ~2GB in cc1plus, so full -j OOM-kills the compiler on memory-constrained
# containers. NUM_CPUS caps the substrate build (Makefile), CMAKE_BUILD_PARALLEL_LEVEL
# the wheel build. Raise on high-memory runners for speed.
environment = { NUM_CPUS = "2", CMAKE_BUILD_PARALLEL_LEVEL = "2" }
# Primary-only smoke against the freshly installed wheel (auditwheel/delocate have
# vendored the OpenFHE dylibs by now, so no external lib path is needed).
test-command = "python {project}/python/tests/wheel_smoke.py"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# Self-contained repair (see scripts/repair_wheel.sh): bundle OpenFHE + libnbfhetch
# next to the extensions + fhetch_sim with $ORIGIN rpaths, then auditwheel only retags
# manylinux (excluding the bundled libs). Sidesteps auditwheel's inability to resolve
# the in-wheel companion lib or repair the fhetch_sim executable.
repair-wheel-command = "bash /project/scripts/repair_wheel.sh {wheel} {dest_dir}"
# Build the OpenFHE substrate once per platform, inside the container, from source.
# Clean any stale (e.g. host-built) substrate/build dirs copied in first. The wheel
# build (scikit-build-core) then compiles libnbfhetch/openfhe-python/session against
# it. cmake/gcc/make ship in the image; scikit-build-core pulls ninja itself.
before-all = [
    "rm -rf vendor/lib vendor/niobium-fhetch/vendor/openfhe/build build build-wheel",
    "make config-openfhe-release build-openfhe-release",
]

[tool.cibuildwheel.macos]
# Same self-bundle relocatability as Linux, macOS tooling (delocate + @loader_path):
# scripts/repair_wheel_macos.sh bundles OpenFHE + libnbfhetch next to the extensions +
# fhetch_sim and ensures @loader_path is on each rpath, then delocate only verifies/tags
# (--exclude the bundled libs). MACOSX_DEPLOYMENT_TARGET=11.0 on the substrate build keeps
# the bundled dylibs' min-OS low so delocate tags a portable macosx_11_0 wheel.
# NOTE: the repair logic is proven locally (python -m build + the script); the
# cibuildwheel-macos flow is CI-validated (it needs python.org framework Pythons).
environment = { NUM_CPUS = "2", CMAKE_BUILD_PARALLEL_LEVEL = "2", MACOSX_DEPLOYMENT_TARGET = "11.0" }
before-all = [
    "rm -rf vendor/lib vendor/niobium-fhetch/vendor/openfhe/build build build-wheel",
    "make config-openfhe-release build-openfhe-release",
]
repair-wheel-command = "bash scripts/repair_wheel_macos.sh {wheel} {dest_dir}"
